# legion

./: Cargo.toml  README.md
common/: Cargo.toml  README.md
docs/: architecture.md  user_guide.md
legion/: Cargo.toml
legion-zmq/: Cargo.toml
legion-zmq/src/: cluster_communication.rs
legion/src/: cli.rs  cluster_api.rs  cluster_management.rs  main.rs
legionctl/: Cargo.toml
legionctl/src/: main.rs
plugins/legion-plugin-cri/: Cargo.toml  README.md  build.rs
plugins/legion-plugin-docker/: Cargo.toml  README.md
plugins/legion-scheduler/: Cargo.toml
