[package]
name = "legion"
version = "0.1.0"
authors = ["Marek Counts <marek@thenullchannel.com>"]
edition = "2018"
build = "build.rs"


[[bin]]
name = "server"
path = "src/main.rs"

[features]

[dependencies]
clap = "2.33.0"
common = { path = "../common", package = "legion-common"}
legion-zmq = { path = "../legion-zmq" }
daemonize = "0.4.1"
log = "0.4.6"
chrono = "0.4"
libloading = "0.5.2"


#default plugins
legion_docker = { path = "../plugins/legion-plugin-docker", version ="0.0.2", package = "legion-plugin-docker"}
